bin_PROGRAMS=kiwix-index
AM_CPPFLAGS=-I$(top_srcdir)/src/common
AUTOMAKE_OPTIONS=subdir-objects
kiwix_index_SOURCES= kiwix-index.cpp
kiwix_index_CXXFLAGS=$(KIWIXLIB_CFLAGS) $(LIBZIM_CFLAGS) $(LIBCTPP2_CFLAGS) $(XAPIAN_CFLAGS) $(ICU_CFLAGS) $(LZMA_CFLAGS) $(ZLIB_CFLAGS) -I../common/

kiwix_index_LDFLAGS=$(CHECK_LDFLAGS)

if STATIC_BINS
kiwix_index_LDFLAGS+= $(KIWIXLIB_STATIC_LIBS) $(XAPIAN_STATIC_LDFLAGS) $(STATIC_LIBRT_ARCHIVE) $(LIBCTPP2_STATIC_LDFLAGS) $(ICU_STATIC_LDFLAGS) $(LIBZIM_STATIC_LDFLAGS) $(LZMA_STATIC_LDFLAGS) $(ZLIB_STATIC_LDFLAGS) $(UUID_STATIC_LDFLAGS) $(STATIC_LIBM_ARCHIVE) $(STATIC_LIBSTDCPP_ARCHIVE) $(STATIC_LIBDL_ARCHIVE) $(STATIC_LIBGCC_ARCHIVE) $(STATIC_LIBPTHREAD_ARCHIVE) --static
else
kiwix_index_LDFLAGS+= $(KIWIXLIB_LIBS) $(XAPIAN_LDFLAGS) $(ICU_LDFLAGS) $(LIBCTPP2_LDFLAGS) $(LIBZIM_LDFLAGS) $(LZMA_LDFLAGS) $(ZLIB_LDFLAGS) -lpthread $(UUID_LDFLAGS) -ldl
endif

if IS_OSX
kiwix_index_LDFLAGS+= $(LIBICONV_STATIC_LDFLAGS) $(GETTEXT_STATIC_LDFLAGS) -framework IOKit -framework CoreFoundation
# -static-libgcc -static-libstdc++
# kiwix_index_CXXFLAGS+= -stdlib=libstdc++
endif

if HAVE_UPX
all-am: all
	upx -9 $(bin_PROGRAMS)
endif
