bin_PROGRAMS=kiwix-install
AM_CPPFLAGS=-I$(top_srcdir)/src/common
AUTOMAKE_OPTIONS=subdir-objects
kiwix_install_SOURCES= kiwix-install.cpp
kiwix_install_CXXFLAGS=$(KIWIXLIB_CFLAGS) $(LIBZIM_CFLAGS) $(XAPIAN_CFLAGS) $(ICU_CFLAGS) $(LZMA_CFLAGS) $(ZLIB_CLAGS) $(LIBPUGIXML_CFLAGS) $(UUID_CFLAGS) -I../common/

kiwix_install_LDFLAGS=$(CHECK_LDFLAGS)

if STATIC_BINS
kiwix_install_LDFLAGS+= $(KIWIXLIB_STATIC_LIBS) $(XAPIAN_STATIC_LDFLAGS) $(STATIC_LIBRT_ARCHIVE) $(ICU_STATIC_LDFLAGS) $(UUID_STATIC_LDFLAGS) $(LIBZIM_STATIC_LDFLAGS) $(LIBPUGIXML_STATIC_LDFLAGS) $(LZMA_STATIC_LDFLAGS) $(ZLIB_STATIC_LDFLAGS) $(STATIC_LIBM_ARCHIVE) $(STATIC_LIBSTDCPP_ARCHIVE) $(STATIC_LIBDL_ARCHIVE) $(STATIC_LIBGCC_ARCHIVE) $(STATIC_LIBPTHREAD_ARCHIVE) --static
else
kiwix_install_LDFLAGS+= $(KIWIXLIB_LIBS) $(XAPIAN_LDFLAGS) $(ICU_LDFLAGS) $(UUID_LDFLAGS) $(LIBZIM_LDFLAGS) $(LIBPUGIXML_LDFLAGS) $(LZMA_LDFLAGS) $(ZLIB_LDFLAGS) -ldl -lpthread
endif

if IS_OSX
# kiwix_install_CXXFLAGS+= -stdlib=libstdc++
# kiwix_install_LDFLAGS+= -static-libgcc -static-libstdc++
endif

if HAVE_UPX
all-am: all
	upx -9 $(bin_PROGRAMS)
endif
